--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "custom-web-creator",
-  "version": "0.0.28",
+  "version": "0.0.30",
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": ">=14.18.1"
+    "node": "=14.8.0"
   },
   "scripts": {
     "start:dev": "grunt bump:patch && webpack serve --open --mode development --progress",
@@ -13,7 +13,10 @@
     "build:prod": "grunt bump:patch && webpack --config ./webpack.prod.config.js --progress",
     "build:dev": "grunt bump:patch && webpack --progress",
     "azurepostscript": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server.js",
+    "build-heroku:prod": "webpack --config ./webpack.prod.config.js --progress",
+    "heroku-postbuild": "npm run build-heroku:prod"
   },
   "author": "",
   "license": "ISC",
