--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "custom-web-creator",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "=16.13.2"
+    "node": "=16.13.2",
+    "npm": "8.1.2"
   },
   "scripts": {
     "start:dev": "grunt bump:patch && webpack serve --open --mode development --progress",
@@ -18,7 +19,7 @@
     "build-heroku:prod": "webpack --config ./webpack.prod.config.js --progress",
     "heroku-postbuild": "npm run build-heroku:prod"
   },
-  "author": "",
+  "author": "Constantin Iacovlev",
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
