--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "azurepostscript": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags",
     "start": "node server.js",
     "build-heroku:prod": "webpack --config ./webpack.prod.config.js --progress",
-    
     "heroku-postbuild": "npm run build-heroku:prod"
   },
   "author": "Constantin Iacovlev",
@@ -104,5 +103,8 @@
       "last 1 safari version",
       "IE 11"
     ]
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
