--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/preset-env": "7.13.10",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "antd": "^4.16.0",
+    "antd": "^4.17.0",
     "array-move": "^4.0.0",
     "axios": "^0.21.1",
     "babel-loader": "8.2.2",
@@ -79,6 +79,8 @@
     "xlsx": "^0.17.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
