--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-color": "^2.19.3",
     "react-dom": "17.0.1",
     "react-highlight-words": "^0.17.0",
+    "react-json-view": "^1.21.3",
     "react-lazylog": "^4.5.3",
     "react-redux": "7.2.2",
     "react-router": "5.2.0",
