--- a/prod.env
+++ b/prod.env
@@ -3,6 +3,8 @@ PORT=8000
 ###########
 enviroment= 'PROD'
 
+# when filters are enabled, user see just components present in whitelist
+COMPONENTS_FILTERS= 'enabled'
+
 #   Api Domains
 API_HOSTNAME= ''
-
