--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.1",
     "babel-loader": "8.2.2",
     "build": "0.1.4",
+    "chance": "^1.1.8",
     "connected-react-router": "^6.9.1",
     "css-loader": "5.1.1",
     "css-minimizer-webpack-plugin": "^3.0.0",
