fix: removed control on whitelist's in exportedFromAntd.jsx

--- a/prod.env
+++ b/prod.env
@@ -4,7 +4,7 @@ PORT=8000
 enviroment= 'PROD'
 
 # when filters are enabled, user see just components present in whitelist
-COMPONENTS_FILTERS= 'enabled'
+COMPONENTS_FILTERS= 'disabled'
 
 #   Api Domains
 API_HOSTNAME= ''
