--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "build:prod": "grunt bump:patch && webpack --config ./webpack.prod.config.js --progress",
     "build:dev": "grunt bump:patch && webpack --progress",
     "azurepostscript": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags",
-    "start": "node server.js",
-    "build-heroku:prod": "webpack --config ./webpack.prod.config.js --progress",
-    "heroku-postbuild": "npm run build-heroku:prod"
+    "start": "npm run build:prod&&node server.js"
   },
   "author": "Constantin Iacovlev",
   "license": "ISC",
